# routes/routes.go
@@ -1,15 +1,15 @@
 package routes
 
 import (
-    "github.com/gin-gonic/gin"
+	"github.com/gin-gonic/gin"
 
-    "github.com/mdhenriques/api-go/controllers"
-    "github.com/mdhenriques/api-go/middlewares"
+	"github.com/mdhenriques/api-go/controllers"
+	"github.com/mdhenriques/api-go/middlewares"
 
-    // Swagger:
-    _ "github.com/mdhenriques/api-go/docs"                    // <-- Importa os docs gerados
-    swaggerFiles "github.com/swaggo/files"                    // <-- Import Swagger Files
-    ginSwagger "github.com/swaggo/gin-swagger"                // <-- Import Swagger Handler
+	// Swagger:
+	_ "github.com/mdhenriques/api-go/docs"     // <-- Importa os docs gerados
+	swaggerFiles "github.com/swaggo/files"     // <-- Import Swagger Files
+	ginSwagger "github.com/swaggo/gin-swagger" // <-- Import Swagger Handler
 )
 
 func SetupRouter() *gin.Engine {
@@ -26,6 +26,7 @@ func SetupRouter() *gin.Engine {
 	auth.Use(middlewares.AuthMiddleware())
 	{
 		auth.GET("/me", controllers.GetMe)
+		auth.POST("/tasks", controllers.CreateTask)
 	}
 
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
